# codeinterpreter

./: dump.rdb  pyproject.toml
codeinterpreter/: __init__.py  config.py  parser.py  session.py
codeinterpreter/agents/: functions_agent.py
codeinterpreter/chains/: modifications_check.py  rm_dl_link.py
codeinterpreter/schema/: file.py
codeinterpreterapi/: chat_history.py  config.py  parser.py  session.py
codeinterpreterapi/chains/: __init__.py
codeinterpreterapi/schema/: status.py
examples/: analyze_dataset.py  chat_history_backend.py  plot_sin_wave.py  show_bitcoin_chart.py  use_additional_tools.py
frontend/: app.py  utils.py
tests/: general_test.py
