[tool.poetry]
name = "codeinterpreter"
version = "0.0.11"
authors = ["Kenny <kenny@kdco.llc>"]
license = "MIT"
description = "CodeInterpreterAPI is an (unofficial) open source python interface for the ChatGPT CodeInterpreter."
keywords = ["codeinterpreter", "chatgpt", "codeinterpreterapi", "api", "langchain", "codeboxapi"]
readme = "README.md"
repository = "https://github.com/shroominic/codeinterpreter-api"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
python-dotenv = "^1"
openai = "^0.27"
langchain = "^0.0.268"
openbox = {git = "https://github.com/kdcokenny/openbox.git"}
streamlit = { version = "^1", optional = true }
jupyter-kernel-gateway = { version = "^2", optional = true }
Pillow = { version = "^9", optional = true }

[tool.poetry.extras]
all = ["jupyter-kernel-gateway", "streamlit", "Pillow"]
localbox = ["jupyter-kernel-gateway"]
frontend = ["streamlit"]
image_support = ["Pillow"]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7"
black = "^23"
flake8 = "^6"
pre-commit = "^3.3"
ruff = "^0.0.285"
docformatter = "^1.7.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_third_party = ["ruff", "flake8"]
line_length = 79

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 79